# nature_methods_multicut_pipeline

./: .gitignore  LICENSE.txt  README.md
dependencies/graph-1.6/: CMakeLists.txt  LICENSE.txt
dependencies/graph-1.6/include/andres/: marray_hdf5.hxx  runtime-check.hxx
dependencies/graph-1.6/include/andres/graph/: counting_iterator.hxx  grid-graph.hxx  neighborhood.hxx  threadpool.hxx
dependencies/graph-1.6/include/andres/graph/hdf5/: grid-graph.hxx  hdf5.hxx
dependencies/graph-1.6/include/andres/graph/multicut-lifted/: block-icm-lmc.hxx  block-icm-lmc2.hxx  decomposing_lmc.hxx  fusion_mover.hxx  greedy-additive.hxx  kernighan-lin.hxx  lifted_mc_model.hxx  parallel_lifted_mc.hxx
dependencies/graph-1.6/include/andres/graph/twocut-lifted/: kernighan-lin.hxx
dependencies/graph-1.6/marray_old/andres/: marray.hxx
dependencies/graph-1.6/src/andres/graph/python/: graph.cxx  graph_exporter.hxx  graph_module.cxx  grid_graph.cxx  image.hxx  learn_lifted.cxx  lifted_mc.cxx  lifted_mc_ga_solver.cxx  lifted_mc_kl_solver.cxx  lifted_mc_model.cxx  lifted_mc_parallel_solver.cxx  lifted_mc_solver_exporter.hxx
dependencies/graph-1.6/src/andres/graph/python/examples/: fuse_segmentations.py  fuse_segmentations_gg.py  lifted_mc_model.py  sandbox.py  supervoxel_dense.py
dependencies/graph-1.6/src/andres/graph/python/module/: __init__.py
dependencies/graph-1.6/src/andres/graph/unit-test/multicut-lifted/: block-icm.cxx
dependencies/graph-1.6/src/command-line-tools/: Timer.hpp  boundary-probability-to-multicut-problem-image.cxx  boundary-probability-to-multicut-problem-mesh.cxx  functional.hxx  image-io.hxx  image.hxx  lift-multicut-problem-grid-graph.cxx  lift-multicut-problem.cxx  plot-solution-image.cxx  plot-solution-mesh.cxx  solve-lifted-multicut-problem-grid-graph.cxx  solve-lifted-multicut-problem.cxx  svg.hxx
dependencies/wsdt/: README.md  setup.py
dependencies/wsdt/conda-recipe/: meta.yaml
dependencies/wsdt/examples/: example2d.ipynb  example3d.ipynb
dependencies/wsdt/tests/: testWsDtSegmentation.py
dependencies/wsdt/wsdt/: __init__.py  wsDtSegmentation.py
examples/: init.ipynb  multicut.ipynb  train_test_split.ipynb
examples/false_merge_resolving_pipeline/: detect_and_resolve_false_merges.py  init_exp.py  run_multicuts.py
examples/mcppl_2/: README.md  README.txt  init_exp.py  run_lifted_multicut.py  run_multicut.py
examples/notebooks/: init.ipynb  train_test_split.ipynb
software/: README.txt
software/find_false_merges_src/: __init__.py  compute_feature_images_src.py  compute_path_features_src.py  compute_paths_src.py  random_forest_src.py  resolve_false_merges_src.py
software/multicut_exp/isbi12/: eval_isbi.py  init_exp.py  isbi12_eval_script.bsh  lmc_experiments.py  mc_exp_2d.py  mc_experiments.py  superpixel.py  thin_gt.py
software/multicut_exp/neuroproof/: eval_neuroproof.py  init_exp.py  lmc_experiments.py  mc_experiments.py
software/multicut_exp/rebuttal/neuroproof/: eval_new.py  py_scores.py
software/multicut_exp/rebuttal/snemi/: compare_pmaps.py  init_exp.py  lmc_exp.py  mc_exp.py  start.py  view.py
software/multicut_exp/snemi3d/: init_exp.py  lmc_experiments.py  lmc_init_exp.py  mc_experiments.py  tworf_experiments.py
software/multicut_src/: BlockwiseMC.py  DataSet.py  EdgeRF.py  ExperimentSettings.py  ExperimentSettings.py~  MCSolver.py  MCSolverImpl.py  MetaSet.py  Postprocessing.py  Tools.py  __init__.py  defect_detection.py  defect_handling.py  defect_rf.py  detect_false_merges.py  feature_impls.py  higher_order_feats.py  higher_order_workflows.py  lifted_mc.py  long_range_features.py  multicut_crossvalidation_helper.py  multicut_helper_2d.py  resolve_false_merges.py  sparse_lifted.py  sparse_lifted_features.py  workflow_no_learning.py  wsdt_impl.py
software/multicut_src/cython_tools/: __init__.py  build_cython_tools.sh  edge_volumes.pyx  numpy_helper.pyx  test_nphlpr.py
software/multicut_src/deprecated/: BlockwiseMC.py  deprecated_features.py  lmc_deprecated_features.py
software/multicut_src/false_merges/: __init__.py  compute_border_contacts.py  compute_paths_and_features.py  detect_false_merges.py  false_merges_workflow.py  path_computation.py  remove_small_objects.py
software/multicut_src/synapses/: __init__.py  hard_example_mining.py  synapse_workflow.py
software/multicut_src/tools/: Tools.py  __init__.py  numpy_tools.py
software/multicut_src/tools/cython_tools/: __init__.py  build_cython_tools.sh  edge_volumes.pyx
software/nnet/isbi/: README.md
software/nnet/isbi/Antipasti/: README.md  requirements.txt
software/nnet/isbi/Antipasti/Antipasti/: __init__.py  archkit.py  backend.py  netarchs.py  netdatakit.py  netdatautils.py  netkit.py  netools.py  netrain.py  netutils.py  prepkit.py  pykit.py  theanops.py  vizkit.py
software/nnet/isbi/config/: .theanorc  config.yaml
software/nnet/isbi/deploy/: deploy.py
software/nnet/snemi/: README.md
software/nnet/snemi/Antipasti/: requirements.txt
software/nnet/snemi/Antipasti/Antipasti/: archkit.py  backend.py  netarchs.py  netdatakit.py  netdatautils.py  netkit.py  netools.py  netrain.py  (+6 more)
software/nnet/snemi/Boilerplate/: dataplate.py  prepfunctions.py
software/nnet/snemi/Models/: icv1def.py
software/nnet/snemi/Scripts/: infer.py  train.py
software/scripts/: README-WIN.txt  README.txt  clean_paths.bat  clean_paths.sh  evaluation_for_nn.py  install-cplex-shared-libs.sh  run_mc_2d.bat  run_mc_2d.py  run_mc_2d.sh  run_mc_anisotropic.bat  run_mc_anisotropic.py  run_mc_anisotropic.sh  run_mc_isotropic.bat  run_mc_isotropic.py  run_mc_isotropic.sh  wsdt_impl.py
software/tests/: all_tests.sh  clean_up.sh  prepare_tests.sh  run_tests.sh
software/tests/regression_tests/: compare_caches.py  regression_test_cremi.py  regression_test_isbi.py  regression_test_nproof.py  regression_test_snemi.py  regression_test_utils.py  run_regression_tests.py  view.py
software/tests/test_ppl/: init_test.py  init_test_aniso.py  test_affinity_features.py  test_features.py  test_mcwf.py  test_nifty_to_vigra_order.py
software/tests/test_scripts/: clean_up.sh  run_tests.sh
(+12 files in other folders)
